compiler/tests/success/require/arm-m4/file1.jazz
fn add(reg u32 x y) -> reg u32 {
   reg u32 r;
   r = x + y;
   return r;
}
